--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .yarn/*
-!.yarn/cache
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
+.yarn/cache
+.yarn/patches
+.yarn/plugins
+.yarn/releases*
+.yarn/sdks
+.yarn/versions
