--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.4.2",
     "axios": "^0.25.0",
     "highcharts": "^9.3.3",
     "highcharts-react-official": "^3.1.0",
+    "postcss": "^8.4.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.14",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "tailwindcss": "^3.0.21",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
